Name:                titext
Version:             0.3.1
Synopsis:            reading/writing TI_TEXT files
Description:         Library for reading and writing files to TI_TEXT format, i.e
                     
                     Formal format specification, this is a file consisting of blocks

                     @xxxx
                     yy yy yy yy yy
                     yy yy yy yy yy
                     .. 

                     where xxxx - is hexadecimal address of block and yy is 
                     hecadecimal bytes list of bytes.

                     Library provides lazy and strict interface for reading files

License:             BSD3
License-file:        LICENSE
Author:              Alexander Vershilov
Maintainer:          alexander.vershilov@gmail.com
-- Copyright:           
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.8


Library
  Exposed-modules:
     Data.TiText
  Build-depends:       base
                       , bytestring == 0.9.*
                       , cereal == 0.3.*
                       , text == 0.11.*
                       , attoparsec == 0.10.2.*
  Ghc-Options:         -Wall
  
test-suite test
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  hs-source-dirs:     test/
  ghc-options:        -rtsopts=all -threaded
  build-depends:      base
                      , bytestring
                      , attoparsec
                      , test-framework
                      , test-framework-hunit
                      , test-framework-quickcheck2
                      , QuickCheck
                      , titext
                      , HUnit
                      , text

